--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
 </section>
 
 <section class="section-2">
-    <main class="card-zone">
+    <main class="card-zone" id="card-zone">
         <div class="card_projeto">
             <div class="capa">
                 <figure>
@@ -390,3 +390,86 @@
         </div>
     </main>
 </section>
+<script>
+    document.querySelectorAll('.card_projeto').forEach(el => {
+    el.style.display = 'none';
+});
+</script>
+<div class="modal-overlay" id="modal">
+    <div class="modal">
+        <div class="modal-header">
+            <div class="modal-titulo">
+                <h1>Lorem Ipsum</h1>
+            </div>
+            <div class="modal-creator">
+                <p>projeto criado por <a href="" class="user-name-modal">User</a>.</p>
+            </div>
+        </div>
+
+        <div id="modal-componentes" style="padding: 10px; margin-top: 20px;">
+        </div>
+        
+
+        <div class="section-infos">
+            <div class="titulo-container">
+                <h1>Lorem Ipsun</h1>
+            </div>
+            <div class="tags-container">
+                <span class="tag-span">UI Design</span>
+                <span class="tag-span">Design WEB</span>
+                <span class="tag-span">UX</span>
+            </div>
+            <div class="data-container">
+                <p class="data-criado">criado em 23 de maio de 2023</p>
+            </div>
+        </div>
+
+        <div class="footer-section">
+            <div class="footer-left">
+                <div class="footer-title">Lorem Ipsum</div>
+                <div class="footer-description">
+                    Subtítulo ou descrição<br>
+                    ⭐️⭐️⭐️⭐️⭐️<br>
+                    123 comentários<br>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius impedit iure vitae rem iusto cum,
+                    dolores voluptas dolor perspiciatis. Veniam quos expedita ut ab, non voluptates earum excepturi
+                    obcaecati eaque.
+                </div>
+            </div>
+
+            <div class="footer-right">
+                <div class="card-autor">
+                    <div class="header-card-autor">
+                        <div class="container-1">
+                            <div class="header-card-autor-image">
+                                <img src="" alt="Profile pic">
+                            </div>
+                            <div class="header-card-autor-title">
+                                <h1>Autor</h1>
+                                <p>Designer Web</p>
+                            </div>
+                        </div>
+                        <div class="container-2">
+                            <button class="button-container contactar" id="contactar">Contatar</button>
+                            <a href=""><button class="button-container">Ver Perfil</button></a>
+                        </div>
+                    </div>
+                    <div class="outros-projetos">
+                        <div class="grid-projetos">
+                            <div class="card-projeto"></div>
+                            <div class="card-projeto"></div>
+                            <div class="card-projeto"></div>
+                            <div class="card-projeto"></div>
+                            <div class="card-projeto"></div>
+                            <div class="card-projeto"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<script type="module" src="/js/projects/mostrarProjeto.js"></script>
+<script type="module" src="/js/projects/modalsProjects.js"></script>
