--- a/views/login-user/login.ejs
+++ b/views/login-user/login.ejs
@@ -1,23 +1,63 @@
 <head>
     <title>Login</title>
 </head>
+<a href="/" class="btn-voltar">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
+        <path d="M15 18l-6-6 6-6" />
+    </svg>
+</a>
 <link rel="stylesheet" href="/css/login/login.css">
 <div class="container">
     <div class="logo-container">
         <img src="/assets/image/logo.svg" alt="Logo" class="logo">
     </div>
     <h1 class="title">Entrar na sua conta</h1>
+    <div class="auth">
+        <button class="auth-link google">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                <path fill="white"
+                    d="M3.064 7.51A10 10 0 0 1 12 2c2.695 0 4.959.991 6.69 2.605l-2.867 2.868C14.786 6.482 13.468 5.977 12 5.977c-2.605 0-4.81 1.76-5.595 4.123c-.2.6-.314 1.24-.314 1.9s.114 1.3.314 1.9c.786 2.364 2.99 4.123 5.595 4.123c1.345 0 2.49-.355 3.386-.955a4.6 4.6 0 0 0 1.996-3.018H12v-3.868h9.418c.118.654.182 1.336.182 2.045c0 3.046-1.09 5.61-2.982 7.35C16.964 21.105 14.7 22 12 22A9.996 9.996 0 0 1 2 12c0-1.614.386-3.14 1.064-4.49" />
+            </svg>
+        </button>
+        <button class="auth-link linkedin">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                <path fill="white"
+                    d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z" />
+            </svg>
+        </button>
+        <button class="auth-link github">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                <path fill="white"
+                    d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2" />
+            </svg>
+        </button>
+    </div>
     <form method="post" class="form-login" id="login-form">
         <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required placeholder="Digite seu email">
+            <label for="email" class="labelLogin">Email</label>
+            <input type="email" id="email" name="email" placeholder="Digite seu email">
         </div>
 
         <div class="form-group">
-            <label for="password">Senha</label>
-            <input type="password" id="password" name="password" required placeholder="Digite sua senha">
+            <label for="password" class="labelLogin">Senha</label>
+            <input type="password" id="password" name="password" placeholder="Digite sua senha">
         </div>
+        <div id="login-error" class="error-message">
+            Email ou senha incorretos. Tente novamente.
+        </div>
+        <div id="form-error" class="error-message">Por favor, preencha todos os campos.</div>
 
+        <style>
+            .error-message {
+                color: #ea3154;
+                background-color: #171616;
+                padding: 10px;
+                border-radius: 5px;
+                font-size: 0.9rem;
+                margin-top: 10px;
+                display: none;
+            }
+        </style>
         <button class="entrar" type="submit">Entrar</button>
     </form>
     <p class="register-link">Não tem uma conta? <a href="/register">Cadastre-se</a></p>
